src/objects/Transaction_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item_Notce__c</fullName>
        <label>Item Notce</label>
        <length>188</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>Transaction_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>Transaction_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>service_request_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>service request form</label>
        <referenceTo>service_request_form__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>Transaction_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>permissions_Transaction_Line_Item</fullName>
        <filterScope>Queue</filterScope>
        <label>permissions</label>
        <queue>permissions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TL-{000000000}</displayFormat>
        <label>Transaction Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>